--- a/index.html
+++ b/index.html
@@ -57,7 +57,70 @@
                     </p>
                     <a href="https://ivndjss.github.io/My-Work-Photograph-Media-2/"><i class="fa-solid fa-link"></i></a>
                 </div>
-            </div> 
+            </div>
+            <div class="work">
+                <img src="CoffeeShop.jpg">
+                <div class="layer">
+                    <h3>Front-End Design for a Coffee Shop</h3>
+                    <p>this project is one of my entry level works using HTML, CSS, JavaScript and implemented in Github Repository.</p>
+                    <a href="https://ivndjss.github.io/My-Work-CoffeeShop/"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="SimpleStack.png">
+                <div class="layer">
+                    <h3>Simple Stack Operation</h3>
+                    <p>This project is Created for my Student Client. I use HTML, CSS, Javascript for implementing the Stack Operation in Data Structures and Algorithm subject. 
+                    </p>
+                    <a href="https://ivndjss.github.io/My-Work-SimpleStack/"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="planUp.png">
+                <div class="layer">
+                    <h3>planUp</h3>
+                    <p>This is My Self project for digital budgeting for every individual. My plan is to create it using MERN Stack (MongoDB, Express.js, React.js, Node.js) and implement in Cordova to be a Mobile Application that can download thru Play Store or App Store.</p>
+                    <a href="https://www.figma.com/file/mPGh3PCnjgq3FRcc4rTPW4/eWalle?node-id=0%3A1&t=0Dzcaz6jTxp1G1lT-1"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="OkniChat.jpg">
+                <div class="layer">
+                    <h3>Okni-Chat</h3>
+                    <p>this project is one of my entry level works using HTML, CSS, Javascript.
+                        The story behind of this Project is when I found a small group of Developers in Discord, we plan to make an Web Application that hhas the same features of Discord and Messenger.
+                        A Chatting App.
+                    </p>
+                    <a href="https://www.figma.com/file/6RIN0v2ep2BSAZ5J5cSm86/Chat-website?node-id=0%3A1&t=eRB0qE62U1xCodfR-1"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="Talkative.png">
+                <div class="layer">
+                    <h3>Talkative</h3>
+                    <p>This Project is for my Student Client for their Capstone. I created it using HTML, CSS, Javascript, and MySQL.
+                        In this Project, I implemented the Text to Speech recognition, Text to Speech with Dictionary, and Speech to Validator(Pronunciation Validator) using Javascript. 
+                    </p>
+                    <a href="https://ivndjss.github.io/My-Work-Talkative/"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="TextToArt.png">
+                <div class="layer">
+                    <h3>Text to Art</h3>
+                    <p>this project is one of my Student Client for her Data Structures and Algorithm class.</p>
+                    <a href="python.rar" download class="btn"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="MobilePhoneTracker.jpg">
+                <div class="layer">
+                    <h3>Mobile Phone Tracker</h3>
+                    <p>This Project is my Sub-project that I found interesting.
+                    </p>
+                    <a href="tracker.py" download class="btn"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
         </div>
         <a href="https://ivndjss.github.io/My-Works/" class="btn">See more</a>
     </div>
